<resources>
    <!-- GENERAL -->
    <string name="app_name">My Movies</string>
    <string name="attention">Attention</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="undo">Undo</string>
    <string name="error_api">Something went wrong. Please, try again.</string>

    <!-- MOVIE LIST -->
    <string name="title_movie_list">My Movies</string>
    <string name="add_movies">Add movie</string>
    <string name="title_dialog_add">Add movie</string>
    <string name="title_dialog_details">Details</string>
    <string name="hint_movie_title">Movie Title</string>
    <string name="action_search">Search</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_add">Add</string>
    <string name="action_add_new_movie">Add new movie</string>
    <string name="empty_library">Your movie library is empty</string>
    <string name="movie_not_found">Movie not found. Please, try again.</string>
    <string name="movie_add_success">Movie add to your library</string>
    <string name="movie_duplicated">Your library already have this movie</string>
    <string name="show">Show</string>
    <string name="searching_movie">Searching movie</string>
    <string name="movie_del_success">Movie removed</string>
    <string name="movie_recover_success">Movie restored</string>

    <!-- MOVIE DETAIL -->
    <string name="none_movie_selected">Select a movie to see details</string>
    <string name="del_movies">Remove movie</string>
    <string name="title_movie_detail">About the movie</string>
    <string name="action_view_more">See more</string>
    <string name="metascore">METASCORE</string>
    <string name="imdb">IMDB</string>
    <string name="plot">Plot:</string>
    <string name="director">Director:</string>
    <string name="writers">Writers:</string>
    <string name="actors">Actors:</string>
    <string name="language">Language:</string>
    <string name="genre">Genres:</string>
    <string name="rated">Rated:</string>
    <string name="released">Released:</string>
    <string name="runtime">Runtime:</string>
    <string name="country">Country:</string>
    <string name="awards">Awards:</string>
    <string name="delete_movie_confirm">Are you sure you want to remove this movie from your library?</string>

</resources>
