<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    style="?android:attr/textAppearanceLarge"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.rafaelguimas.movies.fragment.MovieDetailFragment"
    android:background="@color/darkBlue"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <android.support.v7.widget.CardView
                android:layout_height="wrap_content"
                app:elevation="2dp"
                app:cardPreventCornerOverlap="false"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:layout_marginLeft="@dimen/margin_normal"
                android:layout_marginRight="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_width="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/img_thumbnail"
                        android:layout_width="wrap_content"
                        app:srcCompat="@drawable/img_movie_placeholder"
                        android:maxHeight="300dp"
                        android:scaleType="centerCrop"
                        android:adjustViewBounds="true"
                        android:layout_height="250dp" />
                </LinearLayout>

            </android.support.v7.widget.CardView>

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_normal"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/tv_title"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="Clube da Luta"
                    style="@style/CustomTextView"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/tv_year"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    tools:text="2016"
                    style="@style/CustomTextView"
                    android:layout_weight="1" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:rowCount="2"
                    app:columnCount="3">

                    <TextView
                        android:text="@string/imdb"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="18sp"
                        android:layout_marginEnd="@dimen/margin_normal"
                        style="@style/CustomTextView" />

                    <TextView
                        android:text="10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_imdb_rating"
                        android:textSize="36sp"
                        android:textStyle="normal|bold"
                        style="@style/CustomTextView"
                        app:layout_gravity="right" />

                    <TextView
                        android:text="/10"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextView"
                        android:id="@+id/tv_imdb_rating_max" />

                    <TextView
                        android:text="@string/metascore"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:layout_marginEnd="@dimen/margin_normal"
                        style="@style/CustomTextView" />

                    <TextView
                        android:text="100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/tv_metascore"
                        android:textSize="36sp"
                        android:textStyle="normal|bold"
                        style="@style/CustomTextView"
                        app:layout_gravity="right" />

                    <TextView
                        android:text="/100"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextView"
                        android:id="@+id/tv_metascore_max" />
                </android.support.v7.widget.GridLayout>

            </LinearLayout>

        </LinearLayout>

        <android.support.v7.widget.CardView
            android:layout_height="match_parent"
            app:elevation="2dp"
            app:cardPreventCornerOverlap="false"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:layout_marginLeft="@dimen/margin_normal"
            android:layout_marginRight="@dimen/margin_normal"
            android:layout_width="match_parent"
            android:layout_marginBottom="@dimen/margin_normal">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="@dimen/margin_normal"
                android:animateLayoutChanges="true">

                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plot"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_plot"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Sinopse" />
                </LinearLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="@dimen/margin_large" >

                </FrameLayout>

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:orientation="horizontal"
                    app:rowCount="3"
                    app:columnCount="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/director"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_director"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Diretor"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/writers"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_writers"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Escritores" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/actors"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_actors"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Atores"/>

                </android.support.v7.widget.GridLayout>

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginTop="@dimen/margin_large"
                    android:background="@color/colorAccent"
                    android:layout_marginBottom="@dimen/margin_large" />

                <Button
                    android:text="@string/action_view_more"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_view_more"
                    style="@style/Widget.AppCompat.Button.Borderless.Colored" />

                <android.support.v7.widget.GridLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/layout_more"
                    android:visibility="gone"
                    app:columnCount="2">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/language"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_language"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Linguagem"
                        android:ellipsize="end"
                        android:maxLines="4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/genre"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_genre"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Gênero"
                        android:ellipsize="end"
                        android:maxLines="4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/rated"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_rated"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Classificação"
                        android:ellipsize="end"
                        android:maxLines="4"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/released"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_released"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Lançamento"
                        android:ellipsize="end"
                        android:maxLines="4" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/runtime"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_runtime"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Duração"
                        android:ellipsize="end"
                        android:maxLines="4"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/country"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_country"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="País"
                        android:ellipsize="end"
                        android:maxLines="4"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/awards"
                        android:layout_marginEnd="@dimen/margin_normal"
                        android:textStyle="normal|bold" />

                    <TextView
                        android:id="@+id/tv_awards"
                        android:layout_width="0dp"
                        app:layout_gravity="fill_horizontal"
                        android:layout_height="wrap_content"
                        android:text="Prêmios"
                        android:ellipsize="end"
                        android:maxLines="4"/>

                </android.support.v7.widget.GridLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

    </LinearLayout>

</ScrollView>
